.vscode/allianceuat_compare/force-app/main/default/objects/Alliance_General_Settings__c/Alliance_General_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Alliance General Settings</label>
</CustomObject>