.vscode/allianceuat_compare/force-app/main/default/objects/Alliance_General_Settings__c/fields/ARRH_Referee_invite__c.field-meta.xml
<CustomField>
    <fullName>ARRH_Referee_invite__c</fullName>
    <label>ARRH - Referee invite</label>
    <length>255</length>
    <type>Text</type>
</CustomField>