.vscode/allianceuat_compare/force-app/main/default/objects/Alliance_General_Settings__c/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <description>This field is use to keep the batch size of the Batch class &quot;ShiftStatusBatch&quot; and the Schedular class of the Batch class is &quot;ShiftStatusScheduler&quot;</description>
    <label>Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>