.vscode/allianceuat_compare/force-app/main/default/objects/Alliance_General_Settings__c/fields/Minimum_Match_Percent_Invite_Worker__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Match_Percent_Invite_Worker__c</fullName>
    <defaultValue>40</defaultValue>
    <label>Minimum Match Percent (Invite Worker)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>