.vscode/allianceuat_compare/force-app/main/default/objects/Alliance_General_Settings__c/fields/MyAlliancePortal__c.field-meta.xml
<CustomField>
    <fullName>MyAlliancePortal__c</fullName>
    <inlineHelpText>URL for 3b portal</inlineHelpText>
    <label>MyAlliancePortal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>