.vscode/allianceuat_compare/force-app/main/default/objects/Alliance_General_Settings__c/fields/Non_Portal_URL__c.field-meta.xml
<CustomField>
    <fullName>Non_Portal_URL__c</fullName>
    <label>Non Portal URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>