.vscode/allianceuat_compare/force-app/main/default/objects/Alliance_General_Settings__c/fields/Orientation_checklist__c.field-meta.xml
<CustomField>
    <fullName>Orientation_checklist__c</fullName>
    <label>Orientation checklist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>