.vscode/allianceuat_compare/force-app/main/default/objects/Alliance_General_Settings__c/fields/Referee_Form_general__c.field-meta.xml
<CustomField>
    <fullName>Referee_Form_general__c</fullName>
    <label>Referee Form - general</label>
    <length>255</length>
    <type>Text</type>
</CustomField>