.vscode/allianceuat_compare/force-app/main/default/objects/Alliance_General_Settings__c/fields/Referee_Form_non_clinical__c.field-meta.xml
<CustomField>
    <fullName>Referee_Form_non_clinical__c</fullName>
    <label>Referee Form - non clinical</label>
    <length>255</length>
    <type>Text</type>
</CustomField>