.vscode/allianceuat_compare/force-app/main/default/objects/Alliance_General_Settings__c/fields/T_A_Preferences__c.field-meta.xml
<CustomField>
    <fullName>T_A_Preferences__c</fullName>
    <label>T&amp;A Preferences</label>
    <length>255</length>
    <type>Text</type>
</CustomField>